# commitbot

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  commitbot.toml
.github/workflows/: release-assets.yml  release.yml
commitbot-macros/: Cargo.toml
commitbot-macros/src/: lib.rs
devops/: ga-release-plan.sh  publish-if-complete.sh  release.sh  render-release-notes.sh
src/: cli_args.rs  config.rs  git.rs  lib.rs  logging.rs  main.rs  setup.rs
src/llm/: mod.rs  ollama.rs  openai.rs  prompt_builder.rs  prompts.rs  stream.rs
tests/: cli_basics.rs  config.rs  git.rs  lib_types.rs  prompt_live.rs
tests/test_diffs/: csharp_repository.diff  go_logging_middleware.diff  java_email_service.diff  js_debounce_hook.diff  php_phone_validation.diff  python_rate_limit.diff  ruby_soft_delete.diff  rust_auth_feature.diff  rust_fix_panic.diff  ts_api_types.diff
