[package]
name = "commitbot"
version = "0.2.1"
edition = "2024"

description = "A CLI assistant that generates commit and PR messages from your diffs using LLMs."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/MikeGarde/commitbot"
homepage = "https://github.com/MikeGarde/commitbot"
documentation = "https://docs.rs/commitbot"
keywords = ["git", "commit", "cli", "llm", "chatgpt"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
dirs = "6.0.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
