[package]
name = "commitbot"
version = "0.4.0"
edition = "2024"

description = "A CLI assistant that generates commit and PR messages from your diffs using LLMs."
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/MikeGarde/commitbot"
homepage = "https://github.com/MikeGarde/commitbot"
documentation = "https://docs.rs/commitbot"
keywords = ["git", "commit", "cli", "llm", "chatgpt"]
categories = ["command-line-utilities", "development-tools", "text-processing"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
colored = "3"
crossterm = "0.29"
dirs = "6.0.0"
env_logger = "0.11"
indicatif = "0.18.2"
log = "0.4"
musli = { version = "0.0.149", features = ["json", "alloc"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
